tests/rosetta/transpiler/Rust/draw-a-pixel-1.error
warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/draw-a-pixel-1.rs:49:37
   |
49 |         static mut g_width: i64 = 0;;
   |                                     ^ help: remove this semicolon
   |
   = note: `#[warn(redundant_semicolons)]` on by default

warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/draw-a-pixel-1.rs:50:38
   |
50 |         static mut g_height: i64 = 0;;
   |                                      ^ help: remove this semicolon

warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/draw-a-pixel-1.rs:51:57
   |
51 |         static mut g_img: Vec<Vec<String>> = Vec::new();;
   |                                                         ^ help: remove this semicolon

warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/draw-a-pixel-1.rs:52:33
   |
52 |         static mut g_y: i64 = 0;;
   |                                 ^ help: remove this semicolon

warning: unnecessary parentheses around `while` condition
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/draw-a-pixel-1.rs:53:15
   |
53 |         while (g_y < g_height) {
   |               ^              ^
   |
   = note: `#[warn(unused_parens)]` on by default
help: remove these parentheses
   |
53 -         while (g_y < g_height) {
53 +         while g_y < g_height {
   |

warning: unnecessary parentheses around `while` condition
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/draw-a-pixel-1.rs:56:19
   |
56 |             while (x < g_width) {
   |                   ^           ^
   |
help: remove these parentheses
   |
56 -             while (x < g_width) {
56 +             while x < g_width {
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/draw-a-pixel-1.rs:58:21
   |
58 |                 x = (x + 1);
   |                     ^     ^
   |
help: remove these parentheses
   |
58 -                 x = (x + 1);
58 +                 x = x + 1;
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/draw-a-pixel-1.rs:61:19
   |
61 |             g_y = (g_y + 1);
   |                   ^       ^
   |
help: remove these parentheses
   |
61 -             g_y = (g_y + 1);
61 +             g_y = g_y + 1;
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/draw-a-pixel-1.rs:68:32
   |
68 |         let duration_us: i64 = ((_end - _start) / 1000);
   |                                ^                      ^
   |
help: remove these parentheses
   |
68 -         let duration_us: i64 = ((_end - _start) / 1000);
68 +         let duration_us: i64 = (_end - _start) / 1000;
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/draw-a-pixel-1.rs:69:33
   |
69 |         let memory_bytes: i64 = (_end_mem - _start_mem);
   |                                 ^                     ^
   |
help: remove these parentheses
   |
69 -         let memory_bytes: i64 = (_end_mem - _start_mem);
69 +         let memory_bytes: i64 = _end_mem - _start_mem;
   |

error[E0308]: mismatched types
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/draw-a-pixel-1.rs:63:45
   |
63 |         g_img[100 as usize][100 as usize] = "red";
   |         ---------------------------------   ^^^^^- help: try using a conversion method: `.to_string()`
   |         |                                   |
   |         |                                   expected `String`, found `&str`
   |         expected due to the type of this binding

error: aborting due to 1 previous error; 10 warnings emitted

For more information about this error, try `rustc --explain E0308`.
